--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         os: [ubuntu]
         # We still kind of support Ruby 1.8.7
-        ruby: [2.7, "3.0", 3.1, head, jruby]
+        ruby: [2.7, "3.0", 3.1, head, jruby, truffleruby-head]
 
     name: >-
       ${{matrix.os}}:ruby-${{matrix.ruby}}
